  throttling. This does not fix the whole problem, so I've added some big
  warnings when the clock is adjusted, including an annoying one every 5
  minutes if the clock was set backwards, until the time is OK again
  (catches up with the original time).
  This fixes #0003230 reported by Stealth, and #0002521 reported by durrie.
- Throttling time is now more accurate, especially with larger time values
  such as 3 connections per 60 seconds. Previously that -could- result in
  3 per 90 seconds due to timer inaccuracy (which was max <time>*1.5), now
  it would be max 65 seconds (max 5s inaccuracy, lower with lower times).
- Smallll fix for time shift protection
** 3.2.8-rc2 release **
- Some text fixes regarding time shift feature
- Fix for compile problem on FreeBSD (and possibly other OS's):
  - When pkg-config is present but does not recognize --static, use
    default c-ares library options.
  - Set default c-ares library options to -lcares on FreeBSD and others.
    Set to -lcares -lrt on Linux (previously was -lcares -lrt for all).
  Thanks to goldenwolf for the bugreport (#0003803) and providing a test-
  shell to trace this issue down.
** 3.2.8-rc2 *NIX downloads replaced **
- 'link xx with SSL option enabled on non-SSL compile' was incorrectly
  printed out as a warning, when in fact it's an error (and was treated as
  such). Same for ZIP on non-zip compile. Reported by Stealth (#0003833).
- Fixed harmless (but silly) message which happened on every IRCd boot
  (time jump message).
- Updated credits (donations)
** 3.2.8 release **
- Fixed (serious) security issue regarding allow::options::noident,
  reported by meepmeep (#0003852).
** 3.2.8.1 release **
- Fixed compile issue on Solaris regarding c-ares (-lrt), reported and
  test shell provided by fraggeln (#0003854).
- Improved automatic SSL detection on Solaris (/usr/sfw), reported by
  fraggeln (also #0003854).
- Don't do show-connect-info on serversonly ports